[package]
name = "weaver"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.92"
description = "A logo extraction tool that crawls domains."
repository = "https://github.com/pedromfedricci/weaver"
authors = ["Pedro de Matos Fedricci <pedromfedricci@gmail.com>"]

[dependencies]
crossbeam = "0.8"
csv = "1"
dashmap = "6"
env_logger = "0.11"
log = "0.4"
num_cpus = "1"
reqwest = "0.13"
scraper = "0.25"
sha2 = "0.10"
url = "2"

clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features = [
  "rt-multi-thread",
  "io-util",
  "io-std",
  "sync",
  "macros",
  "parking_lot",
  "signal",
] }

# exn = "0.3" // NOTE: Looks interesting, try later, or just anyhow.

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
